<resources>
    <string name="app_name">PetHealthLord</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="add_button">Add Button</string>
    <string name="date">Date</string>
    <string name="weight">Weight</string>
    <string name="name_of_your_pet">Name of your pet</string>
    <string name="birth_date_of_your_pet">Birth Date of your pet</string>
    <string name="weight_of_your_pet">Weight of your pet</string>
    <string name="age_of_your_pet">Age of your pet</string>
    <string name="proofile_image_of_pet">Proofile image of pet</string>
    <string name="scale_image">Scale image</string>
    <string name="kg">KG</string>
    <string name="next_dose">Next dose:</string>
    <string name="dose">dose</string>
    <string name="your_pet_companion">Your pet companion</string>
    <string name="open" />
    <string name="close" />
</resources>