<?xml version="1.0" encoding="utf-8"?>



 <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
   android:layout_width="match_parent"
    android:fillViewport="true">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/whiteBlue"
    tools:context=".AddElementsFragment"
    android:padding="2dp">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSize"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_breed_layout" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/name"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/navyBlue"
        app:hintTextColor="@color/navyBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvSize">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:boxStrokeColor="@color/navyBlue"
            app:hintTextColor="@color/navyBlue" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <ImageView
            android:id="@+id/callendarImage"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignEnd="@+id/textInputLayout2"
            android:layout_marginRight="5dp"


            android:elevation="1dp"
            android:src="@drawable/ic_baseline_calendar_month_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/navyBlue"
            app:hintTextColor="@color/navyBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textColor="@color/white"
                app:boxStrokeColor="@color/navyBlue"
                app:hintTextColor="@color/navyBlue" />


        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:hint="@string/weight"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/navyBlue"
        app:hintTextColor="@color/navyBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/white"
            app:boxStrokeColor="@color/navyBlue"
            app:hintTextColor="@color/navyBlue" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/baloo_thambi"
        android:text="@string/name_of_your_pet"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/baloo_thambi"
        android:text="@string/birth_date_of_your_pet"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/baloo_thambi"
        android:text="@string/weight_of_your_pet"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/AddPetButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:elevation="2dp"
        android:onClick="moveToAboutActivity"
        android:text="ADD"

        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textboxAge"
        app:strokeColor="@color/darkSkin"
        app:strokeWidth="2dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textboxAge"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="Age"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/navyBlue"
        app:hintTextColor="@color/navyBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/white"
            app:boxStrokeColor="@color/navyBlue"
            app:hintTextColor="@color/navyBlue" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_thambi"
        android:text="@string/age_of_your_pet"
        app:layout_constraintBottom_toTopOf="@+id/textboxAge"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>